Integrate jade and fix some minor bugs

--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,9 @@
 
 </head>
 <body>
-  <div ng-include="'header.html'"></div>
+  <div ng-include="views/header.html"></div>
   <div class="container-fluid" ng-view ></div>
-  <div ng-include="'footer.html'"></div>
+  <div ng-include="views/footer.html"></div>
 
   <script src="scripts/app.js"></script>
   <script src="scripts/directives/Integer.js"></script>
